# data_room

./: .gitignore  README.md  improvement_roadmap.md  samconfig.toml  testing_guide.md
backend/: .env.example  .gitignore  Makefile  README.md  alembic.ini  initial_data.py  pyproject.toml  requirements.txt
backend/app/: lambda_handler.py  main.py
backend/app/api/: deps.py
backend/app/api/api_v1/: api.py
backend/app/api/api_v1/endpoints/: auth.py  documents.py  folders.py  health.py  integrations.py  sharing.py  users.py
backend/app/core/: config.py  errors.py  logging.py  middleware.py  security.py
backend/app/db/: __init__.py  base.py  base_class.py  dynamodb.py  dynamodb_session.py  init_db.py  session.py
backend/app/db/migrations/: README  env.py
backend/app/models/: __init__.py  document.py  folder.py  integration.py  user.py
backend/app/schemas/: __init__.py  document.py  folder.py  google_auth.py  integration.py  token.py  user.py
backend/app/services/: __init__.py  base.py  document.py  document_dynamodb_service.py  document_lambda.py  dynamodb_service.py  folder.py  google_auth.py  integration.py  s3_storage.py  user.py
backend/app/utils/: constants.py  storage_factory.py
backend/tests/: conftest.py
backend/tests/integration/: test_documents_integration.py  test_google_drive_integration.py  test_google_drive_search.py
backend/tests/unit/: __init__.py  test_documents_router.py  test_google_drive_service.py  test_google_integration.py  test_integration_service.py
backend/tests/utils/: assertions.py  factories.py
frontend/: .env.example  .env.production  .gitignore  .npmrc  DEPLOYMENT.md  README.md  USERGUIDE.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  theme.ts
frontend/src/components/auth/: ProtectedRoute.tsx
frontend/src/components/common/: ThemeToggle.tsx
frontend/src/components/layout/: Layout.tsx  Sidebar.tsx  UserMenu.tsx
frontend/src/context/: AuthContext.tsx  ThemeContext.tsx
frontend/src/pages/: DashboardPage.tsx  DocumentsPage.tsx  GoogleAuthCallback.tsx  GoogleDrivePage.tsx  HealthPage.tsx  IntegrationsPage.tsx  LoginPage.tsx
frontend/src/services/: api.ts  authService.ts  authServiceWithClient.ts  documentService.test.ts  documentService.ts  googleDriveService.ts  healthService.ts
frontend/src/test/: setup.ts
frontend/src/types/: index.ts
infra/aws/: README.md  deploy.sh  main.yaml  teardown.sh  test_deploy.sh
infra/aws/api/: api-gateway.yaml
infra/aws/database/: dynamodb.yaml
infra/aws/frontend/: README.md  static-site.yaml
infra/aws/iam/: roles.yaml
infra/aws/storage/: s3.yaml
infra/docker/: backend.Dockerfile  backend.dockerignore  docker-compose.yml  frontend.Dockerfile  frontend.dockerignore
infra/docker/nginx/: nginx.conf
src/pages/: HealthPage.css  HealthPage.tsx
src/services/: axiosClient.ts  healthService.ts
